# chess-training

./: .gitignore  AGENTS.md  CONTRIBUTORS.md  Cargo.toml  Makefile  README.md  TEST_CLEANUP_VERIFICATION.md  card-migration.md  coverage.txt  package.json  repo-naming-standards.md  rust-naming-audit.md
.github/workflows/: ci.yml  deploy-web-ui.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
apps/: README.md
apps/session-gateway/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/: README.md
crates/card-store/: Cargo.toml  README.md
crates/chess-training-pgn-import/: Cargo.toml  Makefile  README.md  step-by-step-planning.md
crates/chess-training-pgn-import/src/: config.rs  errors.rs  importer.rs  lib.rs  main.rs  model.rs  normalization.rs  storage.rs
crates/chess-training-pgn-import/src/normalization/: mod.rs  normalized_line.rs  raw_game.rs
crates/chess-training-pgn-import/src/pgn/: mod.rs  result.rs  tag.rs
crates/chess-training-pgn-import/tests/: config_cli.rs  config_defaults.rs  importer.rs  opening_graph.rs  opening_graph_bridge.rs  review_domain_ids.rs
crates/quiz-core/: Cargo.toml  README.md
crates/quiz-core/src/: api.rs  cli.rs  engine.rs  errors.rs  lib.rs  ports.rs  source.rs  state.rs  wasm.rs
crates/quiz-core/tests/: end_to_end.rs
crates/review-domain/: Cargo.toml  README.md
crates/review-domain/src/: card.rs  card_aggregate.rs  card_kind.rs  card_state.rs  hash.rs  ids.rs  lib.rs  macros.rs  opening.rs  position.rs  repertoire.rs  review.rs  review_grade.rs  scheduler_contract.rs  study_stage.rs  tactic.rs  unlock.rs  valid_grade.rs
crates/review-domain/src/card/: card.rs  card_.rs  card_aggregate.rs  kind.rs  mod.rs  state.rs  stored_state.rs
crates/review-domain/src/card_state/: bridge.rs  invariants.rs  mod.rs
crates/review-domain/src/grade/: accuracy.rs  conversions.rs  error.rs  grade.rs  grade_impl.rs  intervals.rs  mod.rs  valid_grade.rs
crates/review-domain/src/ids/: card_id.rs  edge_id.rs  id_conversion_error.rs  id_kind.rs  learner_id.rs  mod.rs  move_id.rs  position_id.rs  tactic_id.rs  unlock_id.rs
crates/review-domain/src/opening/: card.rs  edge.rs  edge_input.rs  graph.rs  mod.rs
crates/review-domain/src/position/: _error.rs  _id.rs  chess_position.rs  mod.rs  position.rs  position_error.rs  position_id.rs  position_impl.rs
crates/review-domain/src/repertoire/: graph.rs  mod.rs  move_.rs  opening_graph.rs  repertoire_.rs  repertoire_error.rs
crates/review-domain/src/study_stage/: conversions.rs  mod.rs  queries.rs  stage.rs
crates/review-domain/src/utils/: hash_with_seed.rs  mod.rs
crates/review-domain/src/valid_grade/: adjustments.rs  conversions.rs  mod.rs
crates/review-domain/tests/: card_aggregate.rs  card_state.rs  card_state_invariants.rs  ids.rs  opening_graph.rs  opening_graph_builder.rs  opening_graph_legacy.rs  repertoire.rs  scheduler_contract.rs  study_stage_modules.rs  valid_grade.rs  valid_grade_modules.rs
crates/scheduler-wasm/: CHANGELOG.md  Cargo.toml
crates/scheduler-wasm/src/: bindings.rs  config.rs  lib.rs  scheduler.rs
docs/: README.md  TYPE_INDEX.md  chessboard_implementation_plan.md  coverage-debug.md  generate_type_index.py  issue-172-resolution.md  issue-172-status.md  review-domain-card-state-invariants.md  review-domain-redesign-plan.md  review-domain-scheduler-tasks.md  review-planner-evaluation.md  rust-struct-audit.md  rust-structs-glossary.md  strategic-roadmap.md  ui-component-refactor-roadmap.md  ui-separation-plan.md
documentation/: chess-quiz-engine-execution-plan.md  chess-quiz-engine.md  domain-redesign-considerations.md  pgn-tutor-roadmap.md
src/: README.md  main.rs
tests/: run_with_error_logging.rs
web-ui/: README.md  eslint.config.js  package-lock.json  package.json  repomix.config.json  vitest.config.ts
(+204 files in other folders)
