[package]
edition="2024"
name   ="chess-training-pgn-import"
version="0.1.0"

[dependencies]
clap      ={ version="4", features=["derive"] }
fnv       ="1"
serde     ={ version="1", features=["derive"] }
serde_json="1"
toml      ="0.8"
thiserror ="1"
shakmaty     ="0.29"
review-domain = { path = "../review-domain", features = ["serde"] }

[dev-dependencies]
tempfile="3"
