[package]
edition="2024"
name   ="chess-training-pgn-import"
version="0.1.0"


[dependencies]
chrono       ="0.4.42"
clap         ={ version="4", features=["derive"] }
derive_builder = "0.20.2"
fnv          ="1"
review-domain={ path="../review-domain", features=["serde"] }
serde        ={ version="1", features=["derive"] }
serde_json   ="1"
shakmaty     ="0.29"
thiserror    ="1"
toml         ="0.8"

[features]
serde=["review-domain/serde", "serde/derive"]

[dev-dependencies]
tempfile="3"
