[package]
name = "quiz-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
cli = []
api = []
wasm = []

[dependencies]
chess-training-pgn-import = { path = "../chess-training-pgn-import" }
serde = { version = "1", features = ["derive"] }
shakmaty = "0.29"
thiserror = "1"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "api"
path = "src/bin/api.rs"
required-features = ["api"]

[[bin]]
name = "wasm"
path = "src/bin/wasm.rs"
required-features = ["wasm"]
