[package]
name = "review-domain"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde", "chrono/serde"]
avro = ["dep:apache-avro"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
blake3 = "1"
thiserror = "1"
serde = { version = "1", optional = true, features = ["derive"] }
apache-avro = { version = "0.16", optional = true, features = ["derive"] }
derive_builder = "0.20.2"

[dev-dependencies]
serde_json = "1"
