[package]
edition="2024"
name   ="review-domain"
version="0.1.0"

[features]
serde=["chrono/serde", "dep:serde"]

[dependencies]
apache-avro   ={ version="0.16", optional=true, features=["derive"] }
blake3        ="1"
chrono        ={ version="0.4", default-features=false, features=["std"] }
derive_builder="0.20.2"
serde         ={ version="1", features=["derive"], optional=true }
thiserror     ="1"

[dev-dependencies]
serde_json="1"
