[package]
name = "scheduler-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
scheduler-core = { path = "../scheduler-core" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
uuid = { version = "1", features = ["v4"] }
wasm-bindgen = "0.2"
